// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the Dialog component. Should match snapshot - when Dialog has default type and has close button. 1`] = `
<div
  aria-describedby="headlessui-description-:r5:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r3:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="w-4/5 sm:w-4/5 md:w-3/5 lg:w-2/5 xl:w-2/6 p-2 sm:p-4 transform bg-white shadow-xl rounded-2xl flex flex-col ease-out duration-300 opacity-0 scale-95"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r4:"
    >
      <div
        class="bg-white overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r5:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          Mock Dialog Body
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        />
        <div
          class="flex justify-end text-xl"
        >
          <button
            class="close-button"
            data-testid="close-button"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the Dialog component. Should match snapshot - when Dialog has form type with submit and cancel button. 1`] = `
<div
  aria-describedby="headlessui-description-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col ease-out duration-300 opacity-0 scale-95"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r2:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          Mock Dialog Body
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
